test/integration/bad/reduce_sum/bad_return_type_static.abc
functions {
  int my_func_0(int start, int end, real[] y_slice) {
    return 5;
  }
}

parameters {
  real a[5];
}

model {
  target += reduce_sum_static(my_func_0, a, 1);
}